--- a/frontend/src/components/Trending/Trending.css
+++ b/frontend/src/components/Trending/Trending.css
@@ -14,7 +14,7 @@
 
 .trendingSingleMovieImage{
 
-    z-index: 1;
+    z-index: -1;
 }
 .trendingButtonHeader{
     font-size: 18px;
@@ -57,7 +57,7 @@
     align-items: center;
     margin-left:.2em;
     margin-top: -1em;
-    z-index: 100;
+    z-index: 0;
 }
 .fa-percent {
 margin-left: .1em;
